<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true"
    tools:context=".home.view.HomeFragment">
...
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:fitsSystemWindows="false"
            android:paddingTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/send_request"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp">
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/url_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_url" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Select request type-->
...
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/http_request_type" />

                <!--Body-->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/body_of_post_request_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/headers">

...
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/body_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="top|start"
                            android:hint="@string/enter_json_body"
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/file_to_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/select_File_to_upload"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/text_input_layout_body" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/selected_file_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintTop_toBottomOf="@id/file_to_upload">

                        <TextView
...
                        <TextView
                            android:id="@+id/selected_file_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintEnd_toStartOf="@id/remove_file"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/selected_file" />

                        <ImageButton
                            android:id="@+id/remove_file"
                            android:layout_width="wrap_content"
...
            android:layout_marginVertical="8dp"
            android:text="@string/create_request"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
