<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_header_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/header_title_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Header title" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_header_value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/header_value_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Header Value" />
    </com.google.android.material.textfield.TextInputLayout>


    <Space
        android:layout_width="8dp"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/remove_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:src="@drawable/baseline_remove_24" />

</LinearLayout>